# hiccup

./: ArgParse.hs  ArrayProcs.hs  BSExpr.hs  BSParse.hs  CmdList.hs  Common.hs  ControlProcs.hs  Core.hs  EventMgr.hs  Expr.hs  ExprParse.hs  Extend.hs  Format.hs  Hash.hs  Hiccup.hs  IOProcs.hs  Interp.hs  ListProcs.hs  Main.hs  Match.hs  MathOp.hs  NSProcs.hs  ProcArgs.hs  ProcUtil.hs  ProjectHome.md  README  RToken.hs  StringProcs.hs  TObj.hs  TclChan.hs  TclErr.hs  TclLib.hs  TclObj.hs  TclParse.hs  Tests.hs  Types.hs  Util.hs  VarName.hs  WhenChanged.rb  atests.tcl  (+17 more)
Expr/: Compile.hs  Eval.hs  Parse.hs  TExp.hs  Util.hs
Internal/: InterpSpec.hs  Types.hs  Util.hs
Proc/: CodeBlock.hs  Compiled.hs  Params.hs  Util.hs
TclLib/: ArrayCmds.hs  ArrayProcs.hs  ControlCmds.hs  ControlProcs.hs  CoreCmds.hs  IOCmds.hs  IOProcs.hs  Interp.hs  LibUtil.hs  ListCmds.hs  ListProcs.hs  MathProcs.hs  NSCmds.hs  NSProcs.hs  StringCmds.hs  StringProcs.hs  UtilCmds.hs  UtilProcs.hs
atests/: array_tests.tcl  control_tests.tcl  core_tests.tcl  ensemble_tests.tcl  event_tests.tcl  expr_tests.tcl  interp_tests.tcl  list_tests.tcl  ns_tests.tcl  string_tests.tcl
attic/: Accessor.hs  AccessorM.hs  Hash.hs
examples/: spellcheck.tcl  stack.tcl
