Name:                hiccup
Version:             0.49
Description:         Interpreter for a subset of tcl
License:             GPL
License-file:        LICENSE
Author:              Kyle Consalus
Stability:           experimental
Homepage:            http://hiccup.googlecode.com/
Category:            Compilers/Interpreters
Synopsis:            Relatively efficient Tcl interpreter with support for basic operations
Maintainer:          consalus+hiccup@gmail.com
Build-Depends:       base, HUnit, time, mtl, haskell98, readline, parsec, bytestring, 
                     containers, random, unix, array, regex-posix, directory
Build-Type:          Simple
data-files:          README
extra-source-files:  example.tcl atests.tcl include.tcl

Executable:          hiccup
Other-Modules:       Hiccup, TObj, TclObj, VarName, Common, Internal.Types, Internal.Util, CmdList, Util, Core, 
                     RToken, BSParse, TclParse, EventMgr, TclChan, TclErr, MathOp, TclLib,
                     TclLib.IOCmds, TclLib.StringCmds, TclLib.ListCmds, TclLib.ArrayCmds, TclLib.NSCmds, 
                     TclLib.LibUtil, TclLib.CoreCmds, TclLib.ControlCmds, TclLib.UtilCmds, 
                     TclLib.MathProcs, TclLib.Interp,
                     Expr, Expr.Parse, Expr.Eval, Expr.TExp, Expr.Util, Expr.Compile, 
                     Proc.Params, Proc.Util, Proc.Compiled, Proc.CodeBlock, 
                     Match, Format, ArgParse, Extend
main-is:             Main.hs
ghc-options:         -O2 -funbox-strict-fields -fvia-c -optc-O3 -W
ghc-prof-options:    -auto-all -prof
Extensions:          BangPatterns

